[package]
name = "timeplan"
version = "0.1.0"
authors = ["Ilia Bozhinov <ammen99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/hecrj/iced/", branch = "master" }
iced_graphics = { git = "https://github.com/hecrj/iced/", branch = "master" }
iced_native = { git = "https://github.com/hecrj/iced/", branch = "master" }
iced_core = { git = "https://github.com/hecrj/iced/", branch = "master" }
open = "1.4.0"

[profile.dev]
debug = false
